
Fully support Social Rest API v1-alpha3.
Fully test on Social 1.2.7.

Issues closed: https://jira.exoplatform.org/secure/IssueNavigator.jspa?reset=true&jqlQuery=project+%3D+SCL+AND+fixVersion+%3D+%221.0.0-alpha3%22+AND+status+%3D+Closed+ORDER+BY+priority+DESC

ADDITIONS IN 1.0.0-alpha3
=========================
    Support Social Rest APIs v1-alpha3

REMOVALS IN 1.0.0-alpha3
=========================
    Remove support for Social Rest APIs v1-alpha1 and v1-alpha2, only support final rest version as backward compatibility.

IMPROVEMENTS IN 1.0.0-alpha3
============================
    Send 1 request for one basic authentication request instead of 2

BUG FIXES IN 1.0.0-alpha3
=========================


DETAILED ISSUES IN 1.0.0-alpha3
==============================


##################################### 1.0.0-alpha2 ####################################################

Fully support Social Rest API v1-alpha2. Should work with v1-alpha1 as backward compatibility.
Fully test on Social 1.2.6. Should work with Social 1.2.0-GA and above for Rest v1-alpha1.
                            Should work with Social 1.2.6 and above for Rest v1-alpha2.

Issues closed: https://jira.exoplatform.org/secure/IssueNavigator.jspa?reset=true&jqlQuery=project+%3D+SCL+AND+fixVersion+%3D+%221.0.0-alpha2%22+AND+status+%3D+Closed+ORDER+BY+priority+DESC

ADDITIONS IN 1.0.0-alpha2
=========================
    Change architecture and implement for supporting Rest v1-alpha2 and for backward compatibility of Rest v1-alpha1
    Use slf4j for logging
    Switch to user TestNG instead of JUnit for unit testing
    Add more configuration to cargo for custom ports

    APIs:
      Identity IdentityService#getIdentity(String identityProvider, String remoteId) throws SocialClientLibException;

      RealtimeListAccess<RestActivity> ActivityService#getActivityStream(RestIdentity restIdentity, QueryParams queryParams)